# arducopter_mmc_gazebo

./: .gitignore  .gitmodules
arducopter_mmc/mav_control/: CMakeLists.txt  package.xml
arducopter_mmc/mav_control/config/: mav_control.yaml
arducopter_mmc/mav_control/launch/: mav_control.launch
arducopter_mmc/mav_description/launch/: spawn_3DR_Arducopter.launch
arducopter_mmc/mav_description/urdf/: 3DR_Arducopter.urdf.xacro  3DR_Arducopter_base.urdf.xacro  firefly.urdf.xacro  multirotor_base.urdf.xacro
arducopter_mmc/mav_gazebo/launch/: spawn_firefly.launch  spawn_pelican.launch
arducopter_mmc/mav_gazebo/worlds/: case2015.world
arducopter_mmc/mav_gazebo_plugins/: CMakeLists.txt  package.xml
arducopter_mmc/mav_gazebo_plugins/src/: gazebo_controller_interface.cpp
arducopter_mmc/mav_model/: CMakeLists.txt  package.xml
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/cfg/: MavCtlParams.cfg
custom_msgs/msg/: HSIAController.msg  KalmanFilter.msg  PIDController.msg  SSController.msg
custom_msgs/srv/: StandStill.srv
mav_comm/mav_msgs/: CMakeLists.txt  package.xml
nontilting_mmc/nt_mav_description/: CMakeLists.txt  package.xml
nontilting_mmc/nt_mav_description/launch/: spawn_3DR_Arducopter.launch
nontilting_mmc/nt_mav_description/urdf/: 3DR_Arducopter.urdf (copy).xacro  3DR_Arducopter.urdf.xacro  3DR_Arducopter_base.urdf.xacro  firefly.gazebo.xacro  multirotor_base.urdf.xacro
nontilting_mmc/nt_ss_control/: CMakeLists.txt  package.xml  topics_list.txt
nontilting_mmc/nt_ss_control/cfg/: gazebo_new_ss.yaml  gazebo_new_ss_slow.yaml  gazebo_new_ss_zm0.yaml  gazebo_quad_1.yaml  gazebo_quad_1_dobar.yaml  gazebo_quad_1_ubrzani.yaml  gazebo_quad_backup.yaml  gazebo_quad_nom.yaml  mav_control.yaml
nontilting_mmc/nt_ss_control/cfg/testCase/: A1.yaml  A2.yaml  A3.yaml  A4.yaml  A5.yaml  s1.yaml  s2.yaml  s3.yaml  s4.yaml  s5.yaml
nontilting_mmc/nt_ss_control/include/: AttitudeControlSS.h  AttitudeFeedForward.h  attitude_ctl_node.h  quad_attitude_ctl_node.h
nontilting_mmc/nt_ss_control/launch/: klackalica-ss-control.launch  mas_test.launch  quad-ss-control.launch
nontilting_mmc/nt_ss_control/nodes/: attitude_ctl_node.cpp  quad_attitude_ctl_node.cpp
nontilting_mmc/nt_ss_control/src/: AttitudeControlSS.cpp  AttitudeFeedForward.cpp  height_ctl.py  mav_state_pub.py  mav_vel_ref_pub.py  pid.py  position_yaw_ctl.py
