<package>
  <name>custom_msgs</name>
  <version>1.0.0</version>
  <description>Package containing custom messages</description>

  <maintainer email="tomislav.haus@fer.hr">Tomislav Haus</maintainer>

  <author>Tomislav Haus</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
