<package>

  <name>nt_mav_description</name>
  <version>1.0.0</version>
  <description>The mav_description package provides URDF models of the modified 3DR Arducopter quadrotor with moving masses.</description>

  <maintainer email="matija.bedekovic2@fer.hr">Matija Bedekovic</maintainer>

  <author>Markus Achtelik</author>
  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Pascal Gohl</author>
  <author>Sammy Omari</author>

  <license>Other</license>

  <url type="website">https://github.com/ethz-asl/euroc_simulator/wiki</url>

  <author email="ffurrer@gmail.com">Fadri Furrer</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
